--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Lunch</title>
+        <title>RestaurantVote</title>
     </head>
     <body>
         <div id="app"></div>
